@@ -1,5 +1,9 @@
 Revision history for libev, a high-performance and full-featured event loop.
 
+TODO: signal mask problem documentation
+TODO: ev_loop_wakeup
+	- do no rely on ceil() in ev_e?poll.c.
+
 4.03 Tue Jan 11 14:37:25 CET 2011
 	- officially support polling files with all backends.
 	- support files, /dev/zero etc. the same way as select in the epoll
